Add all icons necessary for MCH.

--- a/RotationSimulator/RotationSimulator.csproj
+++ b/RotationSimulator/RotationSimulator.csproj
@@ -21,6 +21,42 @@
   <ItemGroup>
     <None Remove="images\icons\down_right_arrow.png" />
     <None Remove="images\icons\icon_missing.png" />
+    <None Remove="images\icons\mch_airanchor.png" />
+    <None Remove="images\icons\mch_armpunch.png" />
+    <None Remove="images\icons\mch_autocrossbow.png" />
+    <None Remove="images\icons\mch_automatonqueen.png" />
+    <None Remove="images\icons\mch_barrelstabilizer.png" />
+    <None Remove="images\icons\mch_bioblaster.png" />
+    <None Remove="images\icons\mch_cleanshot.png" />
+    <None Remove="images\icons\mch_detonator.png" />
+    <None Remove="images\icons\mch_drill.png" />
+    <None Remove="images\icons\mch_flamethrower.png" />
+    <None Remove="images\icons\mch_gaussround.png" />
+    <None Remove="images\icons\mch_heatblast.png" />
+    <None Remove="images\icons\mch_heatedcleanshot.png" />
+    <None Remove="images\icons\mch_heatedslugshot.png" />
+    <None Remove="images\icons\mch_heatedsplitshot.png" />
+    <None Remove="images\icons\mch_hotshot.png" />
+    <None Remove="images\icons\mch_hypercharge.png" />
+    <None Remove="images\icons\mch_pilebunker.png" />
+    <None Remove="images\icons\mch_queenoverdrive.png" />
+    <None Remove="images\icons\mch_reassemble.png" />
+    <None Remove="images\icons\mch_ricochet.png" />
+    <None Remove="images\icons\mch_rollerdash.png" />
+    <None Remove="images\icons\mch_rookautoturret.png" />
+    <None Remove="images\icons\mch_rookoverdrive.png" />
+    <None Remove="images\icons\mch_rookoverload.png" />
+    <None Remove="images\icons\mch_slugshot.png" />
+    <None Remove="images\icons\mch_splitshot.png" />
+    <None Remove="images\icons\mch_spreadshot.png" />
+    <None Remove="images\icons\mch_tactician.png" />
+    <None Remove="images\icons\mch_wildfire.png" />
+    <None Remove="images\icons\role_armslength.png" />
+    <None Remove="images\icons\role_footgraze.png" />
+    <None Remove="images\icons\role_headgraze.png" />
+    <None Remove="images\icons\role_leggraze.png" />
+    <None Remove="images\icons\role_peloton.png" />
+    <None Remove="images\icons\role_secondwind.png" />
     <None Remove="images\icons\smn_shield.png" />
     <None Remove="images\icons\smn_summon_phoenix.png" />
   </ItemGroup>
@@ -28,6 +64,42 @@
   <ItemGroup>
     <Resource Include="images\icons\down_right_arrow.png" />
     <Resource Include="images\icons\icon_missing.png" />
+    <Resource Include="images\icons\mch_airanchor.png" />
+    <Resource Include="images\icons\mch_armpunch.png" />
+    <Resource Include="images\icons\mch_autocrossbow.png" />
+    <Resource Include="images\icons\mch_automatonqueen.png" />
+    <Resource Include="images\icons\mch_barrelstabilizer.png" />
+    <Resource Include="images\icons\mch_bioblaster.png" />
+    <Resource Include="images\icons\mch_cleanshot.png" />
+    <Resource Include="images\icons\mch_detonator.png" />
+    <Resource Include="images\icons\mch_drill.png" />
+    <Resource Include="images\icons\mch_flamethrower.png" />
+    <Resource Include="images\icons\mch_gaussround.png" />
+    <Resource Include="images\icons\mch_heatblast.png" />
+    <Resource Include="images\icons\mch_heatedcleanshot.png" />
+    <Resource Include="images\icons\mch_heatedslugshot.png" />
+    <Resource Include="images\icons\mch_heatedsplitshot.png" />
+    <Resource Include="images\icons\mch_hotshot.png" />
+    <Resource Include="images\icons\mch_hypercharge.png" />
+    <Resource Include="images\icons\mch_pilebunker.png" />
+    <Resource Include="images\icons\mch_queenoverdrive.png" />
+    <Resource Include="images\icons\mch_reassemble.png" />
+    <Resource Include="images\icons\mch_ricochet.png" />
+    <Resource Include="images\icons\mch_rollerdash.png" />
+    <Resource Include="images\icons\mch_rookautoturret.png" />
+    <Resource Include="images\icons\mch_rookoverdrive.png" />
+    <Resource Include="images\icons\mch_rookoverload.png" />
+    <Resource Include="images\icons\mch_slugshot.png" />
+    <Resource Include="images\icons\mch_splitshot.png" />
+    <Resource Include="images\icons\mch_spreadshot.png" />
+    <Resource Include="images\icons\mch_tactician.png" />
+    <Resource Include="images\icons\mch_wildfire.png" />
+    <Resource Include="images\icons\role_armslength.png" />
+    <Resource Include="images\icons\role_footgraze.png" />
+    <Resource Include="images\icons\role_headgraze.png" />
+    <Resource Include="images\icons\role_leggraze.png" />
+    <Resource Include="images\icons\role_peloton.png" />
+    <Resource Include="images\icons\role_secondwind.png" />
     <Resource Include="images\icons\smn_shield.png" />
     <Resource Include="images\icons\smn_summon_phoenix.png" />
   </ItemGroup>
